--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,16 +110,19 @@ strong {
   height: 100%;
   background-color: var(--white);
   z-index: 1080;
+}
+.preloader-container .preloader {
+  width: min(100% - 32px, 300px);
+  height: 40px;
+  position: absolute;
+  inset: 0;
+  margin: auto;
   display: grid;
   place-content: center;
 }
-.preloader-container .preloader {
-  width: 300px;
-  height: 40px;
-}
 @media (min-width: 768px) {
   .preloader-container .preloader {
-    transform: scale(1.1);
+    transform: scale(1.2);
   }
 }
 .preloader-container .preloader::before {
@@ -129,14 +132,34 @@ strong {
   height: 39px;
   position: absolute;
   top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  z-index: 1;
   animation: arrow 1.8s alternate 2 forwards;
 }
 .preloader-container img {
-  width: 100%;
+  width: calc(100% - 40px);
   animation: text 1.8s alternate 2 forwards;
-  margin-left: -30px;
 }
 
+@keyframes arrow {
+  0%, 25% {
+    transform: translate(-50%, -50%) scale(0);
+    left: 50%;
+  }
+  25%, 50% {
+    transform: translate(-50%, -50%) scale(1);
+    left: 50%;
+  }
+  50%, 75% {
+    transform: translate(0%, -50%) scale(1);
+    left: 0%;
+  }
+  75%, 100% {
+    transform: translate(0%, -50%) scale(1);
+    left: calc(100% - 39px);
+  }
+}
 @keyframes text {
   0% {
     -webkit-clip-path: polygon(0% 0%, 0% 0%, 0% 100%, 0% 100%);
@@ -154,24 +177,6 @@ strong {
   75% {
     -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
             clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
-  }
-}
-@keyframes arrow {
-  0%, 25% {
-    transform: translate(-50%, -50%) scale(0);
-    left: 50%;
-  }
-  25%, 50% {
-    transform: translate(-50%, -50%) scale(1);
-    left: 50%;
-  }
-  50%, 75% {
-    transform: translate(0%, -50%) scale(1);
-    left: 0%;
-  }
-  75%, 100% {
-    transform: translate(0%, -50%) scale(1);
-    left: calc(100% - 30px);
   }
 }
 .container-fluid {
