--- a/assets/sass/layout/_preloader.scss
+++ b/assets/sass/layout/_preloader.scss
@@ -3,18 +3,21 @@
     inset: 0;
     width: 100%;
     height: 100%;
-    background-color: var(--white);
+    background-color: var(--white);;
     z-index: 1080;
 
-    display: grid;
-    place-content: center;
-
     .preloader {
-        width: 300px;
+        width: min(calc(100% - 32px), 300px);
         height: 40px;
+        position: absolute;
+        inset: 0;
+        margin: auto;
+
+        display: grid;
+        place-content: center;
 
         @include media('md') {
-            transform: scale(1.1);
+            transform: scale(1.2);
         }
 
         &::before {
@@ -24,17 +27,42 @@
             height: 39px;
             position: absolute;
             top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%) scale(0);
+            z-index: 1;
+
             animation: arrow 1.8s alternate 2 forwards; 
+
         }
     }
 
     img {
-        width: 100%;
+        width: calc(100% - 40px);
         animation: text 1.8s alternate 2 forwards;
-        margin-left: -30px;
     }
 }
 
+@keyframes arrow {
+    0%, 25% {
+        transform: translate(-50%, -50%) scale(0);
+        left: 50%;
+    }
+
+    25%, 50% {
+        transform: translate(-50%, -50%) scale(1);
+        left: 50%;
+    }
+
+    50%, 75% {
+        transform: translate(0%, -50%) scale(1);
+        left: 0%;
+    }
+
+    75%, 100% {
+        transform: translate(0%, -50%) scale(1);
+        left: calc(100% - 39px);
+    }
+}
 
 @keyframes text {
     0% {
@@ -51,27 +79,5 @@
     
     75% {
         clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
-    }
-}
-
-@keyframes arrow {
-    0%, 25% {
-        transform: translate(-50%, -50%)scale(0);
-        left: 50%;
-    }
-
-    25%, 50% {
-        transform: translate(-50%, -50%) scale(1);
-        left: 50%;
-    }
-
-    50%, 75% {
-        transform: translate(0%, -50%) scale(1);
-        left: 0%;
-    }
-
-    75%, 100% {
-        transform: translate(0%, -50%) scale(1);
-        left: calc(100% - 30px);
     }
 }
