--- a/assets/sass/layout/_preloader.scss
+++ b/assets/sass/layout/_preloader.scss
@@ -15,12 +15,13 @@
     }
 
     .logo-container {
-        width: 100%;
+        width: 0%;
         height: 100%;
         overflow: hidden;
         position: absolute;
         left: 0;
-        animation: reveal 3s alternate infinite;
+        animation: reveal 3s alternate 2 1s;
+        animation-play-state: paused;
     }
 
     #ad-text-logo {
@@ -32,19 +33,8 @@
         left: 0;
     }
 
-    @keyframes reveal {
-        0%, 50% {
-            width: 0;
-        }
-        
-        100% {
-            width: 100%;
-        }
-    }
-
-
     #ad-arrow-logo {
-        background: rgba(255, 255, 255, 0.4) url('../images/ad_arrow_logo.svg') no-repeat center;
+        background: url('../images/ad_arrow_logo.svg') no-repeat center;
         width: 39px;
         height: 39px;
 
@@ -52,31 +42,55 @@
         top: 50%;
         left: 50%;
 
-        transform: translate(-50%, -50%) scale(0);
         z-index: 1;
 
-        animation: panning 3s alternate infinite;
+        transform: translate(50%, -50%) scale(0);
+        animation: panning 3s alternate 2 1s;
+        animation-play-state: paused;
     }
 
     @keyframes panning {
-        0%, 25% {
-            transform: translate(-50%, -50%) scale(0);
+        0% {
+            transform: translate(50%, -50%) scale(0);
             left: 50%;
         }
 
-        25%, 50% {
-            transform: translate(-50%, -50%) scale(1);
+        15% {
+            transform: translate(0%, -50%) scale(0);
+            left: 50%;
+        }
+
+        20%, 25% {
+            transform: translate(0%, -50%) scale(1);
             left: 50%;
         }
 
         50% {
             transform: translate(0%, -50%) scale(1);
-            left: 0%;
+            left: -6%;
         }
 
-        100% {
+        70%, 100% {
             transform: translate(0%, -50%) scale(1);
-            left: calc(100% - 39px);
-        }        
+            left: calc(100% - 40px);
+        }
+    }
+
+    @keyframes reveal {
+        0% {
+            width: 0%;
+        }
+
+        /* 6% {
+            transform: translateX(30px);
+        } */
+
+        50% {
+            width: 0%;
+        }
+
+        70%, 100% {
+            width: 100%;
+        }
     }
 }
